--- a/Setup/Applications/aug-2/Workflows/test-istio.yaml
+++ b/Setup/Applications/aug-2/Workflows/test-istio.yaml
@@ -13,4 +13,70 @@ notificationRules:
   executionScope: WORKFLOW
   notificationGroups:
   - Account Administrator
+phases:
+- type: KUBERNETES
+  computeProviderName: harness-exploration
+  daemonSet: false
+  infraMappingName: infra
+  name: Phase 1
+  phaseSteps:
+  - type: CONTAINER_SETUP
+    name: Setup Container
+    steps:
+    - type: KUBERNETES_SETUP
+      name: Kubernetes Service Setup
+      properties:
+        replicationControllerName: ${app.name}-${service.name}-${env.name}
+        resizeStrategy: RESIZE_NEW_FIRST
+    stepsInParallel: false
+  - type: CONTAINER_DEPLOY
+    name: Deploy Containers
+    steps:
+    - type: KUBERNETES_DEPLOY
+      name: Upgrade Containers
+    stepsInParallel: false
+  - type: VERIFY_SERVICE
+    name: Verify Service
+    stepsInParallel: false
+  - type: WRAP_UP
+    name: Wrap Up
+    stepsInParallel: false
+  provisionNodes: false
+  serviceName: helloworld
+  statefulSet: false
+rollbackPhases:
+- type: KUBERNETES
+  computeProviderName: harness-exploration
+  daemonSet: false
+  infraMappingName: infra
+  name: Rollback Phase 1
+  phaseNameForRollback: Phase 1
+  phaseSteps:
+  - type: CONTAINER_DEPLOY
+    name: Deploy Containers
+    phaseStepNameForRollback: Deploy Containers
+    statusForRollback: SUCCESS
+    steps:
+    - type: KUBERNETES_DEPLOY_ROLLBACK
+      name: Rollback Containers
+    stepsInParallel: false
+  - type: CONTAINER_SETUP
+    name: Setup Container
+    phaseStepNameForRollback: Setup Container
+    statusForRollback: SUCCESS
+    steps:
+    - type: KUBERNETES_SETUP_ROLLBACK
+      name: Rollback Kubernetes Setup
+    stepsInParallel: false
+  - type: VERIFY_SERVICE
+    name: Verify Service
+    phaseStepNameForRollback: Deploy Containers
+    statusForRollback: SUCCESS
+    stepsInParallel: false
+  - type: WRAP_UP
+    name: Wrap Up
+    stepsInParallel: false
+  provisionNodes: false
+  serviceName: helloworld
+  statefulSet: false
 templatized: false
