Harness IO Git Sync. MODIFY: Setup/Applications/aug-2/Environments/gcp/Service Infrastructure/infra.yaml

--- a/Setup/Applications/aug-2/Environments/gcp/Service Infrastructure/infra.yaml
+++ b/Setup/Applications/aug-2/Environments/gcp/Service Infrastructure/infra.yaml
@@ -5,5 +5,5 @@ computeProviderName: harness-exploration
 computeProviderType: GCP
 deploymentType: KUBERNETES
 infraMappingType: GCP_KUBERNETES
-namespace: puneet
+namespace: default
 serviceName: helloworld
