--- a/Setup/Applications/aug-2/Workflows/test-istio.yaml
+++ b/Setup/Applications/aug-2/Workflows/test-istio.yaml
@@ -27,11 +27,6 @@ phases:
       name: Kubernetes Service Setup
       properties:
         serviceType: LoadBalancer
-        replicationControllerName: ${app.name}-${service.name}-${env.name}
-        fixedInstances: '2'
-        protocol: TCP
-        useIstioRouteRule: true
-        port: 80
         ingressYaml: |-
           # Required placeholders: ${SERVICE_NAME} and ${SERVICE_PORT}
           # ---
@@ -49,9 +44,21 @@ phases:
                  backend:
                   serviceName: ${SERVICE_NAME}
                   servicePort: ${SERVICE_PORT}
-        desiredInstanceCount: fixedInstances
         useIngress: false
         targetPort: 80
+        replicationControllerName: ${app.name}-${service.name}-${env.name}
+        fixedInstances: '2'
+        protocol: TCP
+        istioConfig:
+          gateways:
+          - bookinfo-gateway
+          - gateway1
+          hosts:
+          - example.com
+          - ' example1'
+        useIstioRouteRule: true
+        port: 80
+        desiredInstanceCount: fixedInstances
         resizeStrategy: RESIZE_NEW_FIRST
         serviceSteadyStateTimeout: 10
     stepsInParallel: false
