--- a/Setup/Applications/aug-2/Workflows/vanilla.yaml
+++ b/Setup/Applications/aug-2/Workflows/vanilla.yaml
@@ -26,8 +26,36 @@ phases:
     - type: KUBERNETES_SETUP
       name: Kubernetes Service Setup
       properties:
-        replicationControllerName: ${app.name}-${service.name}-${env.name}
+        serviceType: LoadBalancer
+        ingressYaml: |-
+          # Required placeholders: ${SERVICE_NAME} and ${SERVICE_PORT}
+          # ---
+          apiVersion: extensions/v1beta1
+          kind: Ingress
+          metadata:
+            name: name-will-be-replaced
+            annotations:
+              ingress.kubernetes.io/rewrite-target: /
+          spec:
+            rules:
+            - http:
+               paths:
+               - path: /path
+                 backend:
+                  serviceName: ${SERVICE_NAME}
+                  servicePort: ${SERVICE_PORT}
+        useIngress: false
+        targetPort: 80
+        replicationControllerName: vanilla
+        fixedInstances: '1'
+        protocol: TCP
+        istioConfig: null
+        useIstioRouteRule: false
+        port: 80
+        desiredInstanceCount: fixedInstances
+        maxInstances: 2
         resizeStrategy: RESIZE_NEW_FIRST
+        serviceSteadyStateTimeout: 10
     stepsInParallel: false
   - type: CONTAINER_DEPLOY
     name: Deploy Containers
