Harness IO Git Sync. MODIFY: Setup/Applications/aug-2/Workflows/test-istio.yaml

--- a/Setup/Applications/aug-2/Workflows/test-istio.yaml
+++ b/Setup/Applications/aug-2/Workflows/test-istio.yaml
@@ -53,7 +53,7 @@ phases:
           gateways:
           - bookinfo-gateway
           hosts:
-          - example.com
+          - example.org
         useIstioRouteRule: true
         port: 80
         desiredInstanceCount: fixedInstances
