Harness IO Git Sync. MODIFY: Setup/Applications/aug-2/Workflows/test-istio.yaml

--- a/Setup/Applications/aug-2/Workflows/test-istio.yaml
+++ b/Setup/Applications/aug-2/Workflows/test-istio.yaml
@@ -75,6 +75,14 @@ phases:
     stepsInParallel: false
   - type: VERIFY_SERVICE
     name: Verify Service
+    steps:
+    - type: HTTP
+      name: HTTP
+      properties:
+        method: GET
+        assertion: ${httpResponseCode}==404
+        executeWithPreviousSteps: false
+        url: https://google.com
     stepsInParallel: false
   - type: WRAP_UP
     name: Wrap Up
