--- a/Setup/Applications/aug-2/Workflows/test-istio.yaml
+++ b/Setup/Applications/aug-2/Workflows/test-istio.yaml
@@ -47,16 +47,13 @@ phases:
         useIngress: false
         targetPort: 80
         replicationControllerName: ${app.name}-${service.name}-${env.name}
-        fixedInstances: '2'
+        fixedInstances: '1'
         protocol: TCP
-        istioConfig:
-          gateways:
-          - bookinfo-gateway
-          hosts:
-          - example.org
+        istioConfig: null
         useIstioRouteRule: true
         port: 80
         desiredInstanceCount: fixedInstances
+        maxInstances: 2
         resizeStrategy: RESIZE_NEW_FIRST
         serviceSteadyStateTimeout: 10
     stepsInParallel: false
