Harness IO Git Sync. MODIFY: Setup/Applications/aug-2/Workflows/test-istio.yaml

--- a/Setup/Applications/aug-2/Workflows/test-istio.yaml
+++ b/Setup/Applications/aug-2/Workflows/test-istio.yaml
@@ -165,6 +165,8 @@ rollbackPhases:
     steps:
     - type: KUBERNETES_DEPLOY_ROLLBACK
       name: Rollback Containers
+      properties:
+        rollbackAllPhases: true
     stepsInParallel: false
   - type: CONTAINER_SETUP
     name: Setup Container
